--- a/index.html
+++ b/index.html
@@ -4,10 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jonathan Leverenz
-    </title>
+    <title>Jonathan Leverenz</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <div class="container pt-3">
+        <div class = "row mt-3" >
+            <h1 class=" mx-auto mt-3">Jonathan Leverenz</h1>
+        </div>
+        <div class = "row">
+        <div class = "col-md-4">
+            <button class = "one right pull-right">Press Me</button>
+        </div>
+        <div class = "col-md-2">
+
+        </div>
+        <div class = "col-md-4">
+
+        </div>
+    </div>
+    </div>
 </body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
+<script src = "js/script.js"></script>
 </html>
