edited the website design

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <body>
     <div class="container pt-3">
         <div class = "row mt-3" >
-            <h1 class=" mx-auto mt-3">Jonathan Leverenz</h1>
+            <h1 class="">Jonathan Leverenz</h1>
         </div>
         <div class = "row">
         <div class = "col-md-4">
-            <button class = "one right pull-right">Press Me</button>
+            <button class = "one right pull-right">Git-Hub</button>
         </div>
         <div class = "col-md-2">
 
