more buttons added

--- a/index.html
+++ b/index.html
@@ -9,21 +9,34 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="container pt-3">
-        <div class = "row mt-3" >
+    <div class="container pt-3 ">
+        <div class = "row mt-3 " >
             <h1 class="">Jonathan Leverenz</h1>
         </div>
-        <div class = "row">
-        <div class = "col-md-4">
-            <button class = "one right pull-right">Git-Hub</button>
-        </div>
-        <div class = "col-md-2">
+        <div class = "row" style = "margin-top: 15%;">
+            <div class = "col-md-1">
 
-        </div>
-        <div class = "col-md-4">
+            </div>
 
+            <div class = "col-md-4 text-right">
+                <button class = "">Git-Hub</button>
+            </div>
+            <div class = "col-md-2"></div>
+            <div class = "col-md-4">
+                <button class = "">Contact</button>
+            </div>
         </div>
-    </div>
+        <div class = "row"style = "margin-top: 7%;" >
+            <div class = "col-md-4 text-right">
+                <button class = "">Linkdin</button>
+            </div>
+            <div class = "col-md-4">
+                <button class = "">Play</button>
+            </div>
+            <div class = "col-md-4">
+                <button class = "">Portfolio</button>
+            </div>
+        </div>
     </div>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
