fixed styling element

--- a/index.html
+++ b/index.html
@@ -19,22 +19,22 @@
             </div>
 
             <div class = "col-md-4 text-right">
-                <a href = "https://github.com/JonLev03-hub" target = "_blank" rel="noopener noreferrer"><button class = "">Git-Hub</button></a>
+                <a href = "https://github.com/JonLev03-hub" target = "_blank" rel="noopener noreferrer"><button class = "btn-one">Git-Hub</button></a>
             </div>
             <div class = "col-md-2"></div>
             <div class = "col-md-4">
-                <button class = "">Contact</button>
+                <button class = "btn-one">Contact</button>
             </div>
         </div>
         <div class = "row"style = "margin-top: 7%;" >
             <div class = "col-md-4 text-right">
-                <button class = "">Linkdin</button>
+                <button class = "btn-one">Linkdin</button>
+            </div>
+            <div class = "col-md-4 text-center">
+               <a href = "play.html" ><button class = "btn-one">Play</button> </a>
             </div>
             <div class = "col-md-4">
-               <a href = "play.html" ><button class = "">Play</button> </a>
-            </div>
-            <div class = "col-md-4">
-                <a href = "portfolio.html" ><button class = "">Portfolio</button> </a>
+                <a href = "portfolio.html" ><button class = "btn-one">Portfolio</button> </a>
             </div>
         </div>
     </div>
