--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,21 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <div class = "jumbotron">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4 text-right">
+                    <button class = "btn-two"></button>
+                </div>
+                <div class="col-md-4 text-center">
+                    <button class = "btn-two"></button>
+                </div>
+                <div class="col-md-4 ">
+                    <button class = "btn-two"></button>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
 <script src = "js/script.js"></script>
