added button animation

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <div class = "jumbotron text-center" >
+        <h1>Jonathan Leverenz</h1>
+    </div>
     <div class="container pt-3 ">
-        <div class = "row mt-3 " >
-            <h1 class="">Jonathan Leverenz</h1>
-        </div>
-        <div class = "row" style = "margin-top: 15%;">
+        <div class = "row" >
             <div class = "col-md-1">
 
             </div>
