--- a/portfolio.html
+++ b/portfolio.html
@@ -9,21 +9,19 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class = "jumbotron">
-        <div class="container">
+        <div class="container" style = "padding-top: 4%;">
             <div class="row">
                 <div class="col-md-4 text-right">
-                    <button class = "btn-two"></button>
+                    <button class = "btn-two">Category One</button>
                 </div>
                 <div class="col-md-4 text-center">
-                    <button class = "btn-two"></button>
+                    <button class = "btn-two">Category Two</button>
                 </div>
                 <div class="col-md-4 ">
-                    <button class = "btn-two"></button>
+                    <button class = "btn-two">Category Three</button>
                 </div>
             </div>
         </div>
-    </div>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
 <script src = "js/script.js"></script>
