worked on a new page style

--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-        <div class="container" style = "padding-top: 4%;">
+        <div class="container portfolio">
             <div class="row">
                 <div class="col-md-4 text-right">
                     <button class = "btn-two">Category One</button>
@@ -21,6 +21,11 @@
                     <button class = "btn-two">Category Three</button>
                 </div>
             </div>
+        </div>
+        <div class="container"  id = "projects" >
+            <div class="col-md-4"></div>
+            <div class="col-md-4"></div>
+            <div class="col-md-4"></div>
         </div>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
