--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
             </div>
             <div class = "col-md-2"></div>
             <div class = "col-md-4">
-                <button class = "btn-one">Contact</button>
+                <button class = "btn-one">Linkdin</button>
             </div>
         </div>
-        <div class = "row"style = "margin-top: 7%;" >
+        <div class = "row" >
             <div class = "col-md-4 text-right">
-                <button class = "btn-one">Linkdin</button>
+                <button class = "btn-one">Contact</button>
             </div>
             <div class = "col-md-4 text-center">
                <a href = "play.html" ><button class = "btn-one">Play</button> </a>
