--- a/index.html
+++ b/index.html
@@ -4,41 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jonathan Leverenz</title>
+    <title>Document</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/colorPage.css">
 </head>
 <body>
-    <div class = "jumbotron text-center" >
-        <h1>Jonathan Leverenz</h1>
-    </div>
-    <div class="container pt-3 ">
-        <div class = "row" >
-            <div class = "col-md-1">
+    <div class="container-flex">
+        <h1 class = "outlined jumbotron">Please Select a Color</h1>
+        <div class ="row" id = "colors">
+           <a href = "home.html"> <button class = "colors" id = "red" style = "background-color : red"></button></a>
+           <a href = "home.html"></a> <button class = "colors" id = "blue" style = "background-color : blue"></button></a>
+           <a href = "home.html"></a> <button class = "colors" id = "grey" style = "background-color : grey"></button></a>
+           <a href = "home.html"></a> <button class = "colors" id = "green" style = "background-color : green"></button></a>
 
-            </div>
-
-            <div class = "col-md-4 text-right">
-                <a href = "https://github.com/JonLev03-hub" target = "_blank" rel="noopener noreferrer"><button class = "btn-one">Git-Hub</button></a>
-            </div>
-            <div class = "col-md-2"></div>
-            <div class = "col-md-4">
-                <button class = "btn-one">Linkdin</button>
-            </div>
-        </div>
-        <div class = "row" >
-            <div class = "col-md-4 text-right">
-                <button class = "btn-one">Contact</button>
-            </div>
-            <div class = "col-md-4 text-center">
-               <a href = "play.html" ><button class = "btn-one">Play</button> </a>
-            </div>
-            <div class = "col-md-4">
-                <a href = "portfolio.html" ><button class = "btn-one">Portfolio</button> </a>
-            </div>
         </div>
     </div>
 </body>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
-<script src = "js/script.js"></script>
 </html>
