--- a/home.html
+++ b/home.html
@@ -12,16 +12,16 @@
     <div class="container pt-3">
         <div class="row pt-2" id = "navbar">
             <div class="col-md ">
-                <button class = "btn-one">Home</button>
+                <a href = "home.html"> <button class = "btn-one">Home</button></a>
             </div>
             <div class="col-md text-right">
                 <button class = "btn-one">Resume</button>
             </div>
             <div class="col-md-2 d-flex justify-content-center">
-                <button class = "btn-one">Portfolio</button>
+                <a href = portfolio.html><button class = "btn-one">Portfolio</button></a>
             </div>
             <div class="col-md">
-                <button class = "btn-one">Social</button>
+                <a href = "https://github.com/JonLev03-hub" target = "_blank" rel="noopener noreferrer"><button class = "btn-one">Git-Hub</button></a>
             </div>
             <div class="col-md text-right">
                 <button class = "btn-one">Contact</button>
