--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,24 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-        <div class="container portfolio">
+        <div class="container portfolio pt-3">
+            <div class="row pt-2" id = "navbar">
+                <div class="col-md ">
+                    <a href = "home.html"> <button class = "btn-one">Home</button></a>
+                </div>
+                <div class="col-md text-right">
+                    <button class = "btn-one">Resume</button>
+                </div>
+                <div class="col-md-2 d-flex justify-content-center">
+                    <a href = portfolio.html><button class = "btn-one">Portfolio</button></a>
+                </div>
+                <div class="col-md">
+                    <a href = "https://github.com/JonLev03-hub" target = "_blank" rel="noopener noreferrer"><button class = "btn-one">Git-Hub</button></a>
+                </div>
+                <div class="col-md text-right">
+                    <button class = "btn-one">Contact</button>
+                </div>
+            </div>
             <div class="row">
                 <div class="col-md-4 text-right">
                     <button class = "btn-two">Category One</button>
