added a project template

--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
                     <a href = "home.html"> <button class = "btn-one">Home</button></a>
                 </div>
                 <div class="col-md text-right">
-                    <button class = "btn-one">Resume</button>
+                    <a href ="Resume.pdf" target = "_blank" rel="noopener noreferrer"><button class = "btn-one">Resume</button></a>
                 </div>
                 <div class="col-md-2 d-flex justify-content-center">
                     <a href = portfolio.html><button class = "btn-one">Portfolio</button></a>
@@ -27,22 +27,39 @@
                     <button class = "btn-one">Contact</button>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-md-4 text-right">
-                    <button class = "btn-two">Category One</button>
-                </div>
-                <div class="col-md-4 text-center">
-                    <button class = "btn-two">Category Two</button>
-                </div>
-                <div class="col-md-4 ">
-                    <button class = "btn-two">Category Three</button>
-                </div>
+            <div class="row justify-content-center pt-3">
+                <h1 class = "">My Portfolio</h1>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-md-8 text-center">
+                <p>For the past few years I have done a bunch of projects; and I've worked hard to keep learning. 
+                    I love feedback on all of my projects, and even suggestions 
+                    for new ones! If you have any questions all the projects are linked on github and feel free to contact me. :)
+                </p>
+            </div>
             </div>
         </div>
         <div class="container"  id = "projects" >
-            <div class="col-md-4"></div>
-            <div class="col-md-4"></div>
-            <div class="col-md-4"></div>
+            <div class="row justify-content-center">
+                <div class="container project">
+                    <h1>Test Project</h1>
+                    <div class="tags"></div>
+                    <div class="row">
+                        <h2>Overview :</h2 >
+                        <p>
+                            In this project I created this web portfolio, where I'm Able to 
+                            neatly display my projects, resume, and contact information for future employers.
+                        </p>
+                    </div>
+                    <a href="https://github.com"><image class="git" src = "resources/github.png"></image></a>
+
+                </div>
+                <div class="project"></div>
+                <div class="project"></div>
+                <div class="project"></div>
+                <div class="project"></div>
+                <div class="project"></div>
+            </div>
         </div>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
