--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
                 <a href = "home.html"> <button class = "btn-one">Home</button></a>
             </div>
             <div class="col-md text-right">
-                <a href ="Resume.pdf" target = "_blank" rel="noopener noreferrer"><button class = "btn-one">Resume</button></a>
+                <button class = "btn-one" onclick="popup('resume')">Resume</button>
             </div>
             <div class="col-md-2 d-flex justify-content-center">
                 <a href = portfolio.html><button class = "btn-one">Portfolio</button></a>
@@ -47,6 +47,7 @@
             </div>
         </div>
     </div>
+
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
 <script src = "js/script.js"></script>
