--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
                     <a href = "home.html"> <button class = "btn-one">Home</button></a>
                 </div>
                 <div class="col-md text-right">
-                    <a href ="Resume.pdf" target = "_blank" rel="noopener noreferrer"><button class = "btn-one">Resume</button></a>
+                    <button class = "btn-one" id = >Resume</button>
                 </div>
                 <div class="col-md-2 d-flex justify-content-center">
                     <a href = portfolio.html><button class = "btn-one">Portfolio</button></a>
@@ -24,7 +24,7 @@
                     <a href = "https://github.com/JonLev03-hub" target = "_blank" rel="noopener noreferrer"><button class = "btn-one">Git-Hub</button></a>
                 </div>
                 <div class="col-md text-right">
-                    <button class = "btn-one">Contact</button>
+                    <button class = "btn-one" id="contact">Contact</button>
                 </div>
             </div>
             <div class="row justify-content-center pt-3">
@@ -40,10 +40,13 @@
             </div>
         </div>
         <div class="container"  id = "projects" >
+            
             <div class="row justify-content-center">
-                <div class="container project">
+                <div class="project">
                     <h1>Test Project</h1>
-                    <div class="tags"></div>
+                    <div class="tags"> all the tags
+
+                    </div>
                     <div class="row">
                         <h2>Overview :</h2 >
                         <p>
@@ -58,6 +61,13 @@
                 <div class="project"></div>
                 <div class="project"></div>
                 <div class="project"></div>
+            </div>
+        </div>
+        <div class="bg-modal" id = "resume">
+            <div class="modal-contents resume">
+        
+                <div class="close">+</div>
+                <iframe src="Resume.pdf" style="width: 100%;height: 100%;border: none;"></iframe>
             </div>
         </div>
 </body>
