--- a/home.html
+++ b/home.html
@@ -33,12 +33,8 @@
                     <h1 class = "big" id = "welcome">Welcome,</h1>
                 </div>
                 <div class="row d-flex justify-content-center">
-                    <p>
-                        My name is Jonathan, I'm a up and coming datascientist with a background in game development and mathmatics.
-                        To perform datascience I have learned Python, C, Javascript, SQL, and HTML, and have gainedfield specific knowledge 
-                        from personal projects and training with Butler Universities Data Science bootcamp. With my skills in multiple programming languages
-                        , problem solving, and chart visualization I am able to effectively do data analysis and show results to a large audience. I'd love if
-                        you had a look at some of my work displayed in my portfolio!
+                    <p id = "bio">
+                       
                     </p>
                 </div>
             </div>
