--- a/portfolio.html
+++ b/portfolio.html
@@ -71,6 +71,7 @@
             </div>
         </div>
 </body>
+<script src="githubApi.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
 <script src = "js/script.js"></script>
 </html>
