--- a/home.html
+++ b/home.html
@@ -34,7 +34,11 @@
                 </div>
                 <div class="row d-flex justify-content-center">
                     <p id = "bio">
-                       
+                        My name is Jonathan, I'm a up and coming datascientist with a background in game development and mathmatics.
+                        To perform datascience I have learned Python, C, Javascript, SQL, and HTML, and have gainedfield specific knowledge 
+                        from personal projects and training with Butler Universities Data Science bootcamp. With my skills in multiple programming languages
+                        , problem solving, and chart visualization I am able to effectively do data analysis and show results to a large audience. I'd love if
+                        you had a look at some of my work displayed in my portfolio!
                     </p>
                 </div>
             </div>
@@ -47,4 +51,5 @@
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
 <script src = "js/script.js"></script>
+<script src = "js/bio.js"></script>
 </html>
