loaded the projects from github

--- a/portfolio.html
+++ b/portfolio.html
@@ -74,4 +74,5 @@
 <script src="githubApi.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
 <script src = "js/script.js"></script>
+<script src = "js/portfolio.js"></script>
 </html>
