--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <a href = "index.html"> <button class = "btn-one">Home</button></a>
             </div>
             <div class="col-md text-right">
-                <a href="resources/resume.pdf" target="_blank"> <button class = "btn-one">Resume</button></a>
+                <a href="resources/Resume.pdf" target="_blank"> <button class = "btn-one">Resume</button></a>
             </div>
             <div class="col-md-2 d-flex justify-content-center">
                 <a href = portfolio.html><button class = "btn-one">Portfolio</button></a>
