--- a/portfolio.html
+++ b/portfolio.html
@@ -39,8 +39,10 @@
             </div>
             </div>
         </div>
+        <div class="row justify-content-center">
         <div class="row justify-content-center"  id = "projects" >
-            </div>
+        </div>
+        </div>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
 <script src = "js/portfolio.js"></script>
