--- a/404.html
+++ b/404.html
@@ -1,1 +1,44 @@
-<h1>gues ya broke it </h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Jonathan Leverenz</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+        <div class="container portfolio pt-3">
+            <div class="row pt-2" id = "navbar">
+                <div class="col-md ">
+                    <a href = "index.html"> <button class = "btn-one">Home</button></a>
+                </div>
+                <div class="col-md text-right">
+                    <a href="resources/Resume.pdf" target="_blank"> <button class = "btn-one">Resume</button></a>
+                </div>
+                <div class="col-md-2 d-flex justify-content-center">
+                    <a href = portfolio.html><button class = "btn-one">Portfolio</button></a>
+                </div>
+                <div class="col-md">
+                    <a href = "https://github.com/JonLev03-hub" target = "_blank" rel="noopener noreferrer"><button class = "btn-one">Git-Hub</button></a>
+                </div>
+                <div class="col-md text-right">
+                    <button class = "btn-one" id="contact">Contact</button>
+                </div>
+            </div>
+            <div class="row justify-content-center pt-3">
+                <h1 class = "">Oops...</h1>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-md-8 text-center">
+                <p>Seems you have gone to a page I never made. But don't worry I got ya covered. Here is a game ;)
+                </p>
+            </div>
+            </div>
+        </div>
+        <div class="canvas">
+        </div>
+</body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
+</html>
